# llama-cpp-mcp

./: CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  SPEC.md  pyproject.toml
catalog/: catalog.yaml
src/llama_mcp/: __main__.py  http_api.py  settings.py
src/llama_orchestrator/: __init__.py  __main__.py  benchmarks.py  catalog.py  hardware.py  http_api.py  mcp_server.py  models.py  router.py  runtime.py  settings.py  state.py
src/llama_orchestrator/templates/: default_catalog.yaml
tests/: conftest.py  test_benchmarks.py  test_catalog.py  test_hardware.py  test_http_api.py  test_mcp_server.py  test_router.py  test_runtime.py  test_startup.py
