[project]
name = "llama-cpp-mcp"
version = "0.1.0"
description = "Local llama.cpp MCP server with OpenAI and Anthropic compatibility layers"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["llama.cpp", "mcp", "openai-compatible", "anthropic-compatible", "local-llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "mcp>=1.10.0,<2.0.0",
  "psutil>=7.0.0,<8.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "PyYAML>=6.0.0,<7.0.0",
  "uvicorn>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.25.0,<1.0.0",
]

[project.scripts]
llama-mcp = "llama_mcp.__main__:main"
llama-mcp-http = "llama_mcp.__main__:main_http"
llama-mcp-server = "llama_mcp.__main__:main_mcp"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llama_mcp = ["templates/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
